@@ -77,7 +77,13 @@ sub run {
         next if not $file->is_file;
         my $fileinfo = $file->file_info;
         if ($fileinfo =~ m/^[^,]*\bELF\b/ && $fileinfo =~ m/shared object/) {
-            $sharedobject{$file} = 1;
+            my $perm = $file->operm;
+            my $debug = defined $objdump->{$file}{DEBUG};
+            if ($debug and $perm & 0111 and $file !~ m/\.so(?:\.|$)/) {
+                # position-independent executable
+            } else {
+                $sharedobject{$file} = 1;
+            }
         }
     }
 
