@@ -1,0 +1,1 @@
+E: libhallo1: sharedobject-in-library-directory-missing-soname usr/lib/libhallo.so
